// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.createOrUpdateConsultationMutation should update the existing sections and add a new one 1`] = `
Object {
  "createOrUpdateConsultation": Object {
    "consultations": Array [
      Object {
        "description": "",
        "sections": Array [
          Object {
            "contribuable": false,
            "description": "",
            "position": 0,
            "sections": Array [],
            "sourceable": true,
            "subtitle": "",
            "title": "Le problème constaté",
            "versionable": false,
            "votesHelpText": "Bon courage pour le votes",
          },
          Object {
            "contribuable": true,
            "description": "",
            "position": 1,
            "sections": Array [],
            "sourceable": false,
            "subtitle": "",
            "title": "Les causes",
            "versionable": false,
            "votesHelpText": null,
          },
          Object {
            "contribuable": true,
            "description": "",
            "position": 2,
            "sections": Array [],
            "sourceable": false,
            "subtitle": "",
            "title": "Les enjeux",
            "versionable": false,
            "votesHelpText": null,
          },
          Object {
            "contribuable": true,
            "description": "<p>description de la nouvelle section</p>",
            "position": 3,
            "sections": Array [],
            "sourceable": true,
            "subtitle": "sous titre de la nouvelle section",
            "title": "Nouvelle section",
            "versionable": true,
            "votesHelpText": "texte d'aide de la nouvelle section",
          },
        ],
        "title": "Défaut",
      },
    ],
  },
}
`;

exports[`mutations.createOrUpdateConsultationMutation should update the existing sections containing subsections 1`] = `
Object {
  "createOrUpdateConsultation": Object {
    "consultations": Array [
      Object {
        "description": "",
        "sections": Array [
          Object {
            "contribuable": false,
            "description": "",
            "position": 0,
            "sections": Array [
              Object {
                "contribuable": false,
                "description": "",
                "position": 1,
                "sections": Array [
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 1,
                    "sections": Array [
                      Object {
                        "contribuable": true,
                        "description": "",
                        "position": 1,
                        "sourceable": true,
                        "subtitle": "",
                        "title": "Sous-partie 1",
                        "versionable": true,
                        "votesHelpText": "Il faut voter en cliquant sur les boutons",
                      },
                      Object {
                        "contribuable": true,
                        "description": "",
                        "position": 2,
                        "sourceable": true,
                        "subtitle": "",
                        "title": "Sous-partie 2",
                        "versionable": true,
                        "votesHelpText": "Bon courage pour le votes",
                      },
                    ],
                    "sourceable": false,
                    "subtitle": "Ouverture des données publiques",
                    "title": "Section 1",
                    "versionable": true,
                    "votesHelpText": "Bon votes à tous",
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test17",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test18",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test19",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test20",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test21",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test22",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test23",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test24",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test25",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test26",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                  Object {
                    "contribuable": true,
                    "description": "",
                    "position": 2,
                    "sections": Array [],
                    "sourceable": false,
                    "subtitle": "",
                    "title": "Test27",
                    "versionable": false,
                    "votesHelpText": null,
                  },
                ],
                "sourceable": false,
                "subtitle": "Économie de la donnée",
                "title": "Chapitre Ier",
                "versionable": false,
                "votesHelpText": null,
              },
            ],
            "sourceable": false,
            "subtitle": "La circulation des données et du savoir",
            "title": "Titre Ier",
            "versionable": false,
            "votesHelpText": null,
          },
          Object {
            "contribuable": false,
            "description": "",
            "position": 1,
            "sections": Array [
              Object {
                "contribuable": false,
                "description": "",
                "position": 1,
                "sections": Array [],
                "sourceable": false,
                "subtitle": "Le numérique",
                "title": "Chapitre Ier",
                "versionable": false,
                "votesHelpText": null,
              },
            ],
            "sourceable": false,
            "subtitle": "La protection dans la société numérique",
            "title": "Titre II",
            "versionable": false,
            "votesHelpText": null,
          },
          Object {
            "contribuable": false,
            "description": "",
            "position": 2,
            "sections": Array [
              Object {
                "contribuable": false,
                "description": "",
                "position": 1,
                "sections": Array [],
                "sourceable": false,
                "subtitle": "Encore le numérique",
                "title": "Chapitre Ier",
                "versionable": false,
                "votesHelpText": null,
              },
            ],
            "sourceable": false,
            "subtitle": "L'accès au numérique",
            "title": "Titre III",
            "versionable": false,
            "votesHelpText": null,
          },
        ],
        "title": "Formulaire de consultation",
      },
    ],
  },
}
`;
